<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/batik"
    tools:context=".MainActivity4">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@drawable/custome_edittext"
        android:backgroundTint="@color/black"
        android:layout_marginHorizontal="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:text="@string/my_profile"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="80dp"
            android:contentDescription="@string/my_image"
            android:background="@drawable/pani"/>

    <TextView
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/custome_edittext"
        android:layout_marginHorizontal="50dp"
        android:textSize="20sp"
        android:backgroundTint="@color/retro"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:text="@string/nama"/>

    <TextView
        android:id="@+id/nim"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/custome_edittext"
        android:layout_marginHorizontal="50dp"
        android:textSize="20sp"
        android:backgroundTint="@color/retro"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:text="@string/nim"/>

    <TextView
        android:id="@+id/prodi"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@drawable/custome_edittext"
        android:backgroundTint="@color/retro"
        android:layout_marginHorizontal="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:text="@string/prodi"/>

    <Button
        android:id="@+id/btnSelanjut"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:text="Selanjutnya"
        android:textSize="20sp" />
</LinearLayout>
